--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link href="./css/jspsych.css" rel="stylesheet" type="text/css"></link>
   <link rel="preload" as="image" href="./img/pre-pic.png">
   <link rel="preload" as="image" href="./img/post-pic.png">
+  <link rel="preload" as="image" href="./img/win-pic.png">
+  <link rel="preload" as="image" href="./img/loss-pic.png">
   <title>Spinner</title>
 </head>
   <body>
